opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/username_kernel"
bug-reports: "https://github.com/janestreet/username_kernel/issues"
dev-repo: "git+https://github.com/janestreet/username_kernel.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/username_kernel/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "ppx_jane"
  "dune"     {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "An identifier for a user"
description: "
A string representation for a user, typically a UNIX username
"
